FIX: CSS no scrollbar

--- a/templates/static/CSS/style.css
+++ b/templates/static/CSS/style.css
@@ -242,3 +242,22 @@ tr{
   width: 100%;
   max-width: 200px;
 }
+/* Works on Firefox */
+* {
+  scrollbar-width: thin;
+  scrollbar-color: blue orange;
+}
+
+/* Works on Chrome, Edge, and Safari */
+*::-webkit-scrollbar {
+  width: 8px;
+}
+
+*::-webkit-scrollbar-track {
+  background: #e9ecef;
+}
+
+*::-webkit-scrollbar-thumb {
+  background-color: #ccc;
+  border-radius: 20px;
+}
